# glfw-android-port

./: .gitignore  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Application.cpp  Application.hpp  CMakeLists.txt  main.cpp
app/src/main/res/values/: strings.xml
app/src/main/shaders/: shader.vert
